golang-logrus (0.7.3-2) UNRELEASED; urgency=medium

  * Rename binary package to "golang-github-sirupsen-logrus-dev" to be in line
    with pkg-go team policy.

 -- Tianon Gravi <tianon@debian.org>  Mon, 05 Oct 2015 01:19:49 -0700

golang-logrus (0.7.3-1) unstable; urgency=medium

  * Team upload.
  * Upgrade to 0.7.3.

 -- Tianon Gravi <admwiggin@gmail.com>  Wed, 20 May 2015 09:13:56 -0600

golang-logrus (0.7.1-1) unstable; urgency=medium

  * Upgrade to 0.7.1.

 -- Jessie Frazelle <jess@docker.com>  Tue, 24 Mar 2015 17:54:48 -0600

golang-logrus (0.6.0-1) experimental; urgency=medium

  * Initial release.

 -- Jessie Frazelle <jess@docker.com>  Tue, 10 Mar 2015 22:21:30 +0000